--- a/day03_1230/styles/index.css
+++ b/day03_1230/styles/index.css
@@ -1,60 +1,207 @@
-section{
-    height: 100vh;
+@import url("https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@800&family=Roboto:wght@100&display=swap");
+
+section {
+  height: 100vh;
 }
-
-
 section:nth-child(1) {
-    background-color: yellow;
+  background-color: yellow;
+  background-image: url(https://images.unsplash.com/photo-1626814026160-2237a95fc5a0?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
+  box-shadow: inset 0 0 250px black, inset 0 0 250px black,
+    inset 0 0 250px black, inset 0 0 250px black;
 }
 section:nth-child(2) {
-    background-color: orange;
+  background-color: orange;
 }
 section:nth-child(3) {
-    background-color: black;
+  background-color: black;
 }
 section:nth-child(4) {
-    background-color: gray;
+  background-color: gray;
 }
 section:nth-child(5) {
-    background-color: pink;
+  background-color: pink;
 }
 
 .login_container {
-    display: flex;
-    justify-content: flex-end;
-    padding: 100px;
-    gap : 10px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 100px;
+  gap: 10px;
 }
 
 .login_container select {
-    padding: 10px;
+  padding: 10px;
 }
-
 .login_container button {
-    padding: 10px 20px;
+  padding: 10px 20px;
 }
 
+.main_search_container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
 
+.main_search_container h1 {
+  font-size: 100px;
+  color: red;
+  text-shadow: 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black,
+    0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 2px black, 0 0 5px black,
+    0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black,
+    0 0 5px black;
+}
 
+.main_search_container p:nth-of-type(1) {
+  font-size: 50px;
+  font-family: "Nanum Gothic", sans-serif;
+  /* font-family: "Roboto", sans-serif; */
+  text-align: center;
+  color: white;
+  text-shadow: 0 0 5px black, 0 0 5px black, 0 0 5px black, 0 0 5px black,
+    0 0 5px black;
+}
+.main_search_container p:nth-of-type(2) {
+  font-size: 36px;
+  font-family: "Nanum Gothic", sans-serif;
+  color: white;
+}
+.main_search_container p:nth-of-type(3) {
+  font-size: 24px;
+  font-family: "Nanum Gothic", sans-serif;
+  color: white;
+}
+.main_search_container form {
+  width: 30%;
+  height: 50px;
+  display: grid;
+  grid-template-columns: 70% 30%;
+}
+#search {
+  text-indent: 1em;
+}
+#search + button {
+  background-color: red;
+  border: none;
+  color: white;
+  font-weight: bold;
+}
+/* javascript 사용해서 사용할 수도 있고  */
+#search:focus::placeholder {
+  color: red;
+}
 
+section:nth-child(2) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tabs_container {
+  width: 50%;
+}
 
+.tabs_container button {
+  padding: 20px 30px;
+}
+.tabs_container .tab_contents > div {
+  height: 200px;
+  background-color: pink;
+  display: none;
+}
+/* .tabs_container .tab_contents > div:nth-child(1) {
+  display: block;
+} */
 
+.tabs_container > button:nth-child(1):hover ~ .tab_contents > div:nth-child(1) {
+  display: block;
+}
+.tabs_container > button:nth-child(2):hover ~ .tab_contents > div:nth-child(2) {
+  display: block;
+}
+.tabs_container > button:nth-child(3):hover ~ .tab_contents > div:nth-child(3) {
+  display: block;
+}
 
+section:nth-child(3) {
+  color: white;
+}
 
+.tab_contents > div {
+  display: none;
+  height: 200px;
+  background-color: gray;
+}
 
+section:nth-child(3)
+  input:nth-child(1):checked
+  ~ .tab_contents
+  > div:nth-child(1) {
+  display: block;
+}
 
+section:nth-child(3)
+  input:nth-child(2):checked
+  ~ .tab_contents
+  > div:nth-child(2) {
+  display: block;
+}
 
+section:nth-child(3)
+  input:nth-child(3):checked
+  ~ .tab_contents
+  > div:nth-child(3) {
+  display: block;
+}
 
+.tabs_form {
+  width: 50%;
+}
 
+section:nth-child(3) {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+/* section:nth-child(3) input[type="radio"]{ */
+section:nth-child(3) input[name="btn"] {
+  display: none;
+}
 
+section:nth-child(3) label {
+  padding: 10px 20px;
+  display: inline-block;
+  border: 1px solid white;
+  border-radius: 10px 10px 0 0;
+}
 
+section:nth-child(3) input:nth-child(1):checked ~ label:nth-of-type(1) {
+  /* section:nth-child(3) input:nth-child(1) ~ label:nth-child(4) { */
+  background-color: red;
+}
+section:nth-child(3) input:nth-child(2):checked ~ label:nth-of-type(2) {
+  background-color: red;
+}
+section:nth-child(3) input:nth-child(3):checked ~ label:nth-of-type(3) {
+  background-color: red;
+}
 
+.table_container {
+  display: flex;
+  align-items: center;
+}
+.table_container table {
+  width: 50%;
+  margin: auto;
+  height: 400px;
+}
 
-
-
-
-
-
-
-
-
+/* .tabs_container>tbody>tr{} */
+.table_container tr:nth-child(2n) {
+  /* 짝수 */
+  background-color: lavender;
+}
+.table_container tr:nth-child(2n + 1) {
+  /* 홀수 */
+  background-color: purple;
+}
